# Faizzs-Personal-Website

./: .gitignore  README.md  pyproject.toml  run.sh
db/: schema.sql
faizzs_website.egg-info/: PKG-INFO  SOURCES.txt
flaskr/: __init__.py  db.py  home.py
flaskr/static/: style.css
flaskr/templates/: index.html
tests/: test_db.py
