[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faizzs-website"
version = "0.1.0"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[tool.setuptools.packages.find]
include = ["flaskr*"]

[tool.vercel]
entrypoint = "flaskr:app"
